# cookiecutter-django-app-starter

./: .gitignore  README.md  cookiecutter.json
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/tests/: __init__.py  apps.py
{{cookiecutter.project_name}}/tests/settings/: dev.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: __init__.py  apps.py
