[metadata]
description-file = README.md

[bumpversion]
current_version = '0.0.1'
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:{{ cookiecutter.app_name }}/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    {{ cookiecutter.app_name }}/migrations,
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 99
